--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col">
           <form action="/edit" method="post">
-            <button class="btn btn-primary" type="submit"><i class="fa-solid fa-file-pen"></i></button>
+            <button class="btn btn-primary" type="submit">Save</button>
           </form>
         </div>
       </div>
