--- a/views/index.ejs
+++ b/views/index.ejs
@@ -147,8 +147,7 @@
                                     <a href="/edit/<%= item._id %>" class="btn btn-success" tabindex="-1" role="button"
                                         aria-disabled="true">Edit</a>
                                     <a href="/delete/<%= item._id%>" class="btn btn-danger" tabindex="-1" role="button"
-                                        aria-disabled="true"
-                                        onclick="return confirm('Yakin bang?')">Delete</a>
+                                        aria-disabled="true">Delete</a>
                                 </td>
                             </tr>
                             <%})%>
